--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+div#product-slider {
+    margin-top: 200px;
+    height: fit-content;
+}
 .owl-nav .owl-next, .owl-nav .owl-prev {
     position: absolute;
     top: 50%;
@@ -36,6 +40,9 @@
     color: lightblue;
     background-color: unset;
 }
+.item img {
+    max-width: 100%;
+}
 .owl-nav {
     text-align: center;
 }
@@ -50,5 +57,8 @@
     height: fit-content;
     background-color: unset !important;
     display: none;
+}
+.item-center-active img {
+    transform: scale(1.2);
 }
 
