--- a/css/style.css
+++ b/css/style.css
@@ -61,4 +61,6 @@ div#product-slider {
 .item-center-active img {
     transform: scale(1.2);
 }
-
+.owl-dots button.owl-dot:focus {
+    outline: none;
+}
